force-app/main/default/objects/Traning__c/Traning__c.object-meta.xml
<CustomObject>
    <description>This object is created for the task given on 11-12-2020</description>
    <label>Traning</label>
    <nameField>
        <label>Traning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tranings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>