force-app/main/default/objects/Traning__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <description>This picklist is created for the course object for the task given on 11-12-2020</description>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>java</fullName>
            </value>
            <value>
                <fullName>php</fullName>
            </value>
            <value>
                <fullName>sharepoint</fullName>
            </value>
            <value>
                <fullName>phyton</fullName>
            </value>
            <value>
                <fullName>sql</fullName>
            </value>
            <value>
                <fullName>dot net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>