force-app/main/default/objects/Traning__c/fields/Course_Timings__c.field-meta.xml
<CustomField>
    <fullName>Course_Timings__c</fullName>
    <description>This picklist is created for training object for the task given on 11-12-2020</description>
    <label>Course Timings</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6AM</fullName>
            </value>
            <value>
                <fullName>7AM</fullName>
            </value>
            <value>
                <fullName>8AM</fullName>
            </value>
            <value>
                <fullName>9AM</fullName>
            </value>
            <value>
                <fullName>10AM</fullName>
            </value>
            <value>
                <fullName>11AM</fullName>
            </value>
            <value>
                <fullName>3PM</fullName>
            </value>
            <value>
                <fullName>4PM</fullName>
            </value>
            <value>
                <fullName>5PM</fullName>
            </value>
            <value>
                <fullName>6PM</fullName>
            </value>
            <value>
                <fullName>7PM</fullName>
            </value>
            <value>
                <fullName>8PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>